@@ -13,6 +13,9 @@ Version 2.2.1
    - Bugfix: False GPL version in "doc/gnubiff.texi"
    - Added GPL (version 2) as ASCII text file to the gnubiff directory
    - Cleanup: All FAM functions in "src/local.cc" now have the prefix "fam_"
+   - Cleanup: It should be possible now to compile the code without FAM support
+   - Feature: Configuring gnubiff without support for FAM (feature request
+        #1461632 by Kyle McDonald and others)
 	
 Version 2.2.0           2006-04-09 17:44
  * Robert Sowada
